--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ babel==2.16.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 dj-database-url==2.3.0
-Django==5.1.2
+Django==4.2.5
 django-allauth==65.0.2
 django-crispy-forms==2.3
 django-extra-views==0.14.0
@@ -35,3 +35,4 @@ typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 whitenoise==6.8.2
+psycopg2-binary
