--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+Voici la liste sans doublons :  
+
+```plaintext
 asgiref==3.8.1
 babel==2.16.0
 certifi==2024.8.30
@@ -16,12 +19,14 @@ django-treebeard==4.7.1
 django-widget-tweaks==1.5.0
 factory-boy==3.2.1
 Faker==30.4.0
+gunicorn==20.1.0
 idna==3.10
 moncashify==1.1.0
 mysqlclient==2.2.4
 packaging==24.1
 phonenumbers==8.13.47
 pillow==11.0.0
+psycopg2-binary
 purl==1.6
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
@@ -35,5 +40,4 @@ typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 whitenoise==6.8.2
-psycopg2-binary
-gunicorn==20.1.0
+```
