--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
 asgiref==3.8.1
+attrs==24.3.0
+autobahn==24.4.2
+Automat==24.8.1
 babel==2.16.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
+constantly==23.10.4
+cryptography==44.0.0
+daphne==4.1.2
 dj-database-url==2.3.0
 Django==4.2.5
 django-allauth==65.0.2
@@ -16,24 +23,35 @@ django-treebeard==4.7.1
 django-widget-tweaks==1.5.0
 factory-boy==3.2.1
 Faker==30.4.0
-gunicorn==20.1.0
+gunicorn==23.0.0
+hyperlink==21.0.0
 idna==3.10
+incremental==24.7.2
 moncashify==1.1.0
 mysqlclient==2.2.4
 packaging==24.1
 phonenumbers==8.13.47
 pillow==11.0.0
-psycopg2-binary
+psycopg2-binary==2.9.10
 purl==1.6
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
 PyMySQL==1.1.1
+pyOpenSSL==24.3.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 pytz==2024.2
 requests==2.32.3
+service-identity==24.2.0
 setuptools==75.2.0
 six==1.16.0
 sqlparse==0.5.1
+Twisted==24.11.0
+txaio==23.1.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 whitenoise==6.8.2
+zope.interface==7.2
+daphne==4.0.0
