--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ PyMySQL==1.1.1
 pyOpenSSL==24.3.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
 service-identity==24.2.0
